# daily-workbench

./: README.md  build.bat  gen_icons.py  package-lock.json  package.json  setup-desktop.ps1  setup-desktop.sh  start.bat  start.sh  test_attachment.cjs  test_backup.cjs  test_local_backend.cjs  test_search.cjs
.github/workflows/: build-windows.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs  provider.rs
src-tauri/src/ai/commands/: chat.rs  insight.rs  mod.rs  summary.rs
src-tauri/src/ai/prompts/: mod.rs
src-tauri/src/commands/: attachments.rs  backup.rs  cycle.rs  daily.rs  events.rs  finance.rs  habits.rs  health.rs  hobbies.rs  ideas.rs  learning.rs  memos.rs  mod.rs  mood.rs  pomodoro.rs  review.rs  search.rs  stats.rs  todos.rs  weekly.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src/scripts/: api.js  app.js  attachments.js  router.js  store.js  utils.js
src/styles/: dark.css  main.css  modules.css  variables.css
src/styles/modules/: toggle.css
